add suscription status change api
